@@ -6,3 +6,5 @@ Andreas Stieger
 Karol Babioch <kbabioch@suse.de>
 Andrey Jivsov
 Thomas Merkel (drscream@github)
+Justus Winter <justus@sequoia-pgp.org>
+
